2011-12-30  Holger Vogt
 * inpcom.c: remove a bug reading a file 
   (FIXME: .inc and .lib need some general overhauling!)

2011-12-30  Robert Larice
 * src/include/ngspice/cktdefs.h ,
 * src/include/ngspice/pzdefs.h ,
 * src/spicelib/devices/nbjt2/nbjt2def.h ,
 * src/spicelib/devices/ndev/ndevexch.h ,
 * src/spicelib/devices/numd2/numd2def.h ,
 * src/spicelib/devices/numos/numosdef.h :
  remove CVS `Id',`log' etc. keyword incantations

2011-12-30  Holger Vogt
 * inppas3.c, cktdest.c: reduce memory leaks
 * inpsymt.c: beautify
 * inp.c: .csparam allows to tranfer a param into a vector
   for use in the .control section (yet experimental, not safe
   against syntax errors)

2011-12-29  Holger Vogt
 * b4v6dest.c : improved removal of circuit installation,
   bug no. 3229770. Memory leaks are quasi gone for
   10 run - reset sequences of a 1000 transistor circuit

2011-12-29  Robert Larice
 * src/include/ngspice/Makefile.am :
  install headers in $(pkdatadir)/include/ngspice

  use them with a single
     -I $(pkdatadir)/include
  compiler directive

  This is for user compilation of
    XSPICE and adms codemodels
  outside of the ngspice build directory

  Beware of the "ngspice/config.h" file

  Especially if you build twice,
    (for tclspice and then for ngspice)
  both will install this file,
    with different contents.

  These headers are a mess,
    yet they are at least isolated

  The -I directive
    will allow them to be found only
    on explicit demand with a
    "ngspice/" namespace seperator
  (use 	#include "ngspice/...")

2011-12-29  Robert Larice
 * src/Makefile.am :
  cleanup src/Makefile.am
    TCL_MODULE rules
    CLEANFILES
    edit pkgIndex.tcl at `make' time
      to obey (info "(autoconf) Installation Directory Variables")

2011-12-29  Robert Larice
 * configure.ac :
  remove @libname@
    has been replaced by $(pkglibdir)

2011-12-29  Robert Larice
 * configure.ac ,
 * src/Makefile.am ,
 * src/spinit.in ,
 * src/tclspinit.in :